<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_course"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    style="@style/cardViewStyle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/course_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mstu4001"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_number"
            android:text="@string/mstu4001_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/course_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_name"
            android:text="@string/mstu4001_intro"
            android:textSize="14sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/select_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_intro"
            android:layout_alignParentEnd="true"
            android:text="@string/select"
            android:textSize="14sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>