<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_department"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    app:cardCornerRadius="20dp"
    android:layout_marginBottom="7dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/department_photo"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:layout_alignParentStart="true"
            android:src="@drawable/orld" />

        <TextView
            android:id="@+id/department_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/department_photo"
            android:text="@string/adult_learning_and_leadership"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/department_abb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/department_name"
            android:text="@string/orld"
            android:textSize="14sp" />

        <Button
            android:id="@+id/select_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/department_photo"
            android:layout_alignParentEnd="true"
            android:text="@string/select"
            android:textSize="12sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>