<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_reg_course"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    style="@style/cardViewStyle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/reg_course_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mstu4001"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reg_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_course_number"
            android:text="@string/mstu4001_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/reg_instructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_course_name"
            android:text="DR.X"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/reg_course_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_instructor"
            android:text="3"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/reg_course_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_course_credit"
            android:text="12pm"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/reg_course_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_course_time"
            android:text="TC"
            android:textSize="14sp" />

        <Button
            android:id="@+id/reg_drop_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_course_name"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:text="@string/drop"
            android:textSize="14sp" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>